# nomad

./: .env.example  .gitignore  README.md  docker-compose.yml  langgraph.json  pyproject.toml  test_prompts.md
docs/: architecture.md
searxng/: settings.yml
src/: config.py  main.py
src/agents/: _itinerary.py  _priors.py  _router_schema.py  _scoring.py  destination_suggester.py  flights_agent.py  food_agent.py  hotel_agent.py  logistics_agent.py  router.py  synthesizer.py
src/graph/: __init__.py  builder.py  edges.py
src/output/: formatter.py  schemas.py
src/state/: __init__.py  trip_state.py
src/tools/: __init__.py  _common.py  flights.py  places.py  quota.py  reviews.py  routing.py  web_fetch.py  web_search.py
